--- a/themes/distinctionpp/layouts/partials/comments.html
+++ b/themes/distinctionpp/layouts/partials/comments.html
@@ -1,4 +1,4 @@
-{{ if $.Site.DisqusShortname }}
+{{ if .Site.Config.Services.Disqus.Shortname }}
 <hr />
 <section id="comments">
 <div id="disqus_thread"></div>
@@ -12,7 +12,7 @@ this.page.identifier = '{{ with .File }}{{ .UniqueID }}{{ end }}';
 };
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://{{ $.Site.DisqusShortname | safeURL }}.disqus.com/embed.js';
+s.src = 'https://{{ .Site.Config.Services.Disqus.Shortname | safeURL }}.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
