--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -41,4 +41,9 @@
       {{- end }}
     {{ end }}
   {{ end }}
+  {{- with $.Site.Params.metas }}
+    {{- range . }}
+      {{- . | safeHTML }}
+    {{ end }}  
+  {{ end }}
 </head>
