--- a/themes/distinctionpp/layouts/partials/page.html
+++ b/themes/distinctionpp/layouts/partials/page.html
@@ -2,6 +2,7 @@
   <div class="article-panel-inner article-inner">
     <div class="article-inner">
       <header class="article-header">{{ partial "post/title.html" . }}</header><hr />
+      <div class="article-ads ads-placeholder ads-container"><ins class="adsbygoogle"></ins></li>
       <div class="article-entry" itemprop="articleBody">{{ .Content }}</div>
     </div>
   </div>
