--- a/themes/distinctionpp/static/css/_partial/_header.scss
+++ b/themes/distinctionpp/static/css/_partial/_header.scss
@@ -1,3 +1,6 @@
+@use '../variables' as *;
+@use '../_utils/mixin' as *;
+
 #header {
   padding: 1rem 0.5rem 0.2rem 0.5rem;
   background-color: rgb(51, 51, 51);
@@ -12,9 +15,11 @@
     font-size: 3rem;
   }
 
-  line-height: 100%;
-  text-align: center;
-  font-weight: bold;
+  & {
+    line-height: 100%;
+    text-align: center;
+    font-weight: bold;
+  }
   a {
     color: $title-color;
     text-decoration: none;
@@ -44,13 +49,17 @@
       font-size: 1.2rem;
     }
   }
-  color: $description-color;
-  display: block;
+
+  & {
+    color: $description-color;
+    display: block;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: $title-shadow;
+    line-height: 100%;
+  }
+
   @include clearfix();
-  font-weight: bold;
-  text-align: center;
-  text-shadow: $title-shadow;
-  line-height: 100%;
 }
 
 #main-nav-brand {
