--- a/themes/distinctionpp/static/css/_partial/_default.scss
+++ b/themes/distinctionpp/static/css/_partial/_default.scss
@@ -213,15 +213,19 @@ div.mermaid[data-processed], pre.mermaid[data-processed] {
 
 .ads_infeed {
   height: 50px;
+  max-height: 50px;
 
   @media (min-width: 768px) {
     height: 64px;
+    max-height: 64px;
   }
   @media (min-width: 1200px) {
     height: 80px;
+    max-height: 80px;
   }
 }
 
 .ads_menu {
   height: 50px;
+  max-height: 57px;
 }
