--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -65,7 +65,7 @@
   {{- end }}
   {{- with $.Site.Params.metas }}
     {{- range . }}
-      {{- . | safeHTML }}
-    {{- end }}  
+      {{- . }}
+    {{ end }}
   {{- end }}
 </head>
