--- a/themes/distinctionpp/static/css/_variables.scss
+++ b/themes/distinctionpp/static/css/_variables.scss
@@ -15,6 +15,7 @@ $font-weight-title: Bold;
 $title-color: #ffffff;
 $title-shadow: #000 1px 1px 3px;
 $description-color: #ccc;
+$body-min-width: 680px;
 
 // vars
 $gray-dark: DarkGray;
