--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -65,7 +65,10 @@
   {{- end }}
   {{- with $.Site.Params.metas }}
     {{- range . }}
-      {{- . }}
+    <meta
+      {{- range $k, $v := . }}
+        {{- " " | safeHTMLAttr }}{{ $k | safeHTMLAttr }}="{{ $v | safeHTMLAttr }}"
+      {{- end }} />
     {{ end }}
   {{- end }}
 </head>
